--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -55,9 +55,11 @@
 }
 
 body {
-    font-family: 'Consolas', 'Roboto', 'Inconsolata';
-    margin: 0 auto;
-    width: 100%;
+    font-family: Roboto;
+    margin: 0;
+    padding: 0;
+
+
 }
 
 
@@ -66,11 +68,16 @@ button {
     border: none;
 }
 
-input {
-    background-color: transparent;
+h1{
+    margin: 0;
 }
 
-input::placeholder {
-    left: 25px;
-    position: absolute;
+input {
+    background-color: transparent;
+    border: none;
+}
+
+input[type='text']:focus{
+    outline: none;
+    border: none;
 }
