--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@ body {
     font-family: Roboto;
     margin: 0;
     padding: 0;
+
 }
 
 
@@ -36,4 +37,9 @@ input {
 input[type='text']:focus {
     outline: none;
     border: none;
+}
+
+a{
+    text-decoration: none;
+    color: unset;
 }
