--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -14,7 +14,10 @@ body {
     font-family: Roboto;
     margin: 0;
     padding: 0;
-
+    display: flex;
+    place-items: center;
+    height: 100vh;
+    width: 100vw;
 }
 
 
