--- a/src/app/[locale]/about/layout.module.css
+++ b/src/app/[locale]/about/layout.module.css
@@ -36,8 +36,10 @@
 @media screen and (max-width: 479px) {
   .layout {
     height: 100vh;
+    width: 100vw;
     width: auto;
     display: grid;
+    place-items: center;
     grid-template-areas:
       "nav"
       "main"
@@ -47,6 +49,6 @@
   }
   .nav {
     grid-area: nav;
-    height: 100%;
+    height: 100vh;
   }
 }
