--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -14,18 +14,18 @@
 
 
 body {
-    background: linear-gradient(135deg, #e0e0e0, #d0d0d0, #c0c0c0);
+    background: #0D2F4B;
     background-repeat: repeat;
     background-attachment: fixed;
     font-family: Roboto, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    place-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
+.landing {
+    display: flex;
+    align-items: center;
+}
 
 button {
     background: transparent;
